# Gym_sport_trainer

./: CMakeLists.txt  Main.qml  README.md  main.cpp
database/: databasemanager.cpp  databasemanager.h
views/calendar/: CalendarWidget.qml  NotePopUp.qml
views/calender/: NotePopUp.qml
views/components/: GenericButton.qml  GenericTextField.qml
views/homePage/: CalendarWidget.qml  Dashboard.qml  HomePageView.qml  SideBar.qml  SideBarItem.qml
views/items_exercise/: AddExercisePopup.qml  AddSeancePopup.qml  ExerciseCard.qml  ExerciseList.qml  ExerciseStatsPopup.qml  SeanceCard.qml  SeanceList.qml  SelectExercisePopup.qml
views/login/: HelpText.qml  LoginView.qml  LogoTitle.qml
